# vibes

duplication-colouring-book/movies/: .gitignore  README.md  app.py  data.txt  image_to_video.sh  image_to_video.test.sh  input.approved.txt  input.txt  mise.toml  pyproject.toml
investments/: .gitignore  Cargo.toml  DECIMAL_MIGRATION.md  README.md  TESTING.md  config.toml  orders.csv  prd.md  sample_input.csv
investments/examples/: config.toml  test-portfolio-orders.csv  test-portfolio.csv
investments/src/: csv_parser.rs  main.rs
investments/tests/: integration_test.rs
litellm/: README.md  gemini-client-error-generateJson-api-2025-07-01T16-15-56-537Z.json  gemini-client-error-generateJson-parse-2025-07-01T16-15-56-535Z.json  litellm_config.yaml  mise.toml  start.sh
