[package]
name = "portfolio-rebalancer"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
rust_decimal = { version = "1.35", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
